# diff

./: .gitignore  CMakeLists.txt  README.md
src/bsdiff/: bsdiff.c  bsdiff.h  bspatch.c  bspatch.h
src/bzip2/: bzip2.c  bzip2recover.c  dlltest.c  mk251.c  spewG.c  unzcrash.c
src/module/: diffapk.c  diffapk.h
